# django-linear

./: .flake8  .pre-commit-config.yaml  Procfile  README.md  app.json  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tox.yml
heroku/: release  settings.py
linear/: admin.py  apps.py  email.py  models.py  mutations.py  queries.py  urls.py  views.py
linear/management/commands/: import_issues.py  import_tasks.py
linear/migrations/: 0001_initial.py  0002_linearissue_last_refreshed_at.py
linear/signals/: __init__.py  handlers.py
linear/templates/: feedback_issue_template.md
linear/templates/admin/linear/: change_form.html  change_form_object_tools.html  change_list_object_tools.html
tests/: settings.py  test_models.py  test_signal_handlers.py  urls.py
