[tool.poetry]
name = "django-linear"
version = "0.2.0"
description = "Django app for importing Linear issues into the Django admin site."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-linear"
repository = "https://github.com/yunojuno/django-linear"
documentation = "https://github.com/yunojuno/django-linear"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [{ include = "linear" }]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
requests = "*"
dj_database_url = { version="*", optional=true }
psycopg2 = { version="*", optional=true }
gunicorn = { version="*", optional=true }
whitenoise = { version="*", optional=true }


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
black = {version = "*", allow-prereleases = true}
freezegun = "*"
tox = "*"

[tool.poetry.extras]
heroku = ["gunicorn", "psycopg2", "whitenoise", "dj_database_url"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
